# korea-baseball

./: .gitignore  README.md  pyproject.toml
etl/bigquery/: base.py
terraform/: README.md  airflow.tf  main.tf  terraform.tfvars  variables.tf
